@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/MooseX-StrictConstructor
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-StrictConstructor/ChangeLog,v 1.8 2010/09/10 08:33:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-StrictConstructor/ChangeLog,v 1.9 2010/10/31 09:26:08 tove Exp $
+
+*MooseX-StrictConstructor-0.12 (31 Oct 2010)
+
+  31 Oct 2010; Torsten Veller <tove@gentoo.org>
+  +MooseX-StrictConstructor-0.12.ebuild:
+  Version bump
 
 *MooseX-StrictConstructor-0.11 (10 Sep 2010)
 
